# UNH

./: .gitignore  Energy_Density.pro  Particle_Select&Trace.ipynb  Poynting_Analysis.ipynb  Pusher.ipynb  Various_Tools.ipynb
.ipynb_checkpoints/: Poynting_Analysis-checkpoint.ipynb  Pusher-checkpoint.ipynb
HPC/project-1-bnd_project1/: .gitignore  .gitmodules  README.md  Read-Me.txt
HPC/project-1-bnd_project1/rk4_Payne/: CMakeLists.txt  kdv.cxx  kdv.h  rk4.cxx  run.cxx  test_kdv.cxx
HPC/project-1-bnd_project1/rk4_brianna/: .kdv_func.cxx.swp  CMakeLists.txt  KdV_Plotter.ipynb  kdv.cxx  kdv_func.cxx  kdv_param.h  rhs.cxx  rk2.cxx  rk4.cxx
HPC/project-1-bnd_project1/rk4_brianna/data/plots/plotdata/: 1_kdvDAT_00000101_00001001_04_00.txt  1_kdvSOL_00000101_00001001_04_00.txt  1_kdvVARS.txt
HPC/project-1-bnd_project1/rk4_brianna/old_ipynb/: KdV Plotter Old .ipynb  Untitled.ipynb
HPC/project-1-bnd_project1/rk4_brianna/rk4_dydt/: dydt.cxx  dydt_solver.cxx  ode_math.cxx  param.h  rk4_dydt.cxx
HPC/project-2-brianna-dom/: CMakeLists.txt  Monte Carlo Hydrogen Atom Solution.ipynb  functions.cxx  hydrolib.h  main_hydrogen.cxx  polynomials.cxx  random.cxx  vecmath.cxx  writetofile.cxx
HPC/project-2-brianna-dom/.ipynb_checkpoints/: Monte Carlo Hydrogen Atom Solution-checkpoint.ipynb
IDL/: Energy_Flux.pro  FXvBx.pro  Heating_Vis.pro  LMN_Fields.pro  NewDiv.pro  Poynt_Thm.pro  generator_fig.pro  gse_to_lmn.pro  poynt_thm.pro
notebooks/: MMS_Spec_Issue.ipynb  PSC_template.ipynb  Particle_SelectTrace.ipynb  Pusher.ipynb  Rx_Evolution_JGR.ipynb  Various_Tools.ipynb
